[tool.poetry]
name = "inputs"
version = "0.5.4"
description = ""
authors = ["Forked from Zeth, with contributions from several good folks"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
